# football_scraper

./: .gitignore  README.md  principal_client.py  pyproject.toml  pytest.ini  test_player.py  test_team.py
football_scraper/: __init__.py  principal_client.py
football_scraper/providers/espn/: client.py  competitions.py  league.py  match.py  player.py  team.py  utils.py
football_scraper/providers/fotmob/: competitions.py  constants.py  league.py  match.py  matches_live_today.py  player.py  team.py  utils.py
football_scraper/providers/scoresway/: competitions.py  events_match.py  league.py  player.py  post_match.py  pre_match.py  team.py  utils.py
football_scraper/providers/sofascore/: client.py  competitions.py  constants.py  league.py  manager.py  match.py  player.py  team.py  utils.py
football_scraper/providers/three_sixty_five_scores/: client.py  competitions.py  constants.py  league.py  match.py  player.py  team.py
football_scraper/providers/transfermarkt/: client.py  competitions.py  constants.py  player.py  team.py  utils.py
football_scraper/providers/understat/: client.py  competitions.py  constants.py  league.py  match.py  player.py  team.py  utils.py
manual_test_365scores/: test_competitions.py  test_league.py  test_player.py  test_team.py
providers/espn/: competitions.py  constants.py  league.py  match.py  player.py  team.py  utils.py
providers/fotmob/: client.py  competitions.py  league.py  match.py  matches_live_today.py  player.py  team.py  utils.py
providers/scoresway/: client.py  competitions.py  constants.py  events_match.py  league.py  player.py  post_match.py  pre_match.py  team.py  utils.py
providers/scoresway/data_opta/: Opta Events.xlsx  loaders.py
providers/sofascore/: client.py  competitions.py  league.py  manager.py  match.py  player.py  team.py  utils.py
providers/three_sixty_five_scores/: client.py  competitions.py  league.py  match.py  player.py  team.py  utils.py
providers/transfermarkt/: client.py  competitions.py  player.py  team.py  utils.py
providers/understat/: competitions.py  league.py  match.py  player.py  team.py  utils.py
tests/espn/: test_competition.py  test_league.py  test_match.py  test_player.py  test_team.py
tests/fotmob/: test_competition.py  test_league.py  test_match.py  test_matches_live_today.py  test_player.py  test_team.py
tests/scoresway/: test_competition.py  test_events_match.py  test_league.py  test_player.py  test_post_match.py  test_pre_match.py  test_team.py
tests/sofascore/: test_competition.py  test_league.py  test_manager.py  test_match.py  test_player.py
tests/three_sixty_five_scores/: test_competitions.py  test_league.py  test_match.py  test_player.py  test_team.py
tests/transfermarket/: test_competitions.py  test_player.py  test_team.py
tests/understat/: test_competition.py  test_league.py  test_match.py  test_player.py  test_team.py
