[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-scraper"
version = "0.1.0"
description = "Modular Python library for extracting football data from multiple public providers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cesc Blanco"}
]

dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.0"
]


[project.optional-dependencies]
selenium = ["selenium>=4.0.0"]
playwright = ["playwright>=1.40.0"]

keywords = [
    "football",
    "scraping",
    "soccer",
    "sports-data",
    "sofascore",
    "transfermarkt",
    "fotmob",
    "scoresway"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Repository = "https://github.com/CescBlanco/football-scraper"
Issues = "https://github.com/CescBlanco/football-scraper/issues"