[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cesc-football-scraper"
version = "0.1.3"
description = "Modular Python library for extracting football data from multiple public providers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Cesc Blanco"}
]

dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.0"
]


classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

keywords = [
    "football",
    "scraping",
    "soccer",
    "sports-data",
    "sofascore",
    "transfermarkt",
    "fotmob",
    "scoresway"
]

[tool.setuptools.packages.find]
include = ["football_scraper*"]

[project.optional-dependencies]
selenium = ["selenium>=4.0.0"]
playwright = ["playwright>=1.40.0"]

[project.urls]
Repository = "https://github.com/CescBlanco/football-scraper"
Issues = "https://github.com/CescBlanco/football-scraper/issues"